<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/header"
        android:id="@+id/textViewHeader"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp" />

    <Button
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:text="@string/btn1_txt"
        android:id="@+id/button1"
        android:layout_gravity="center_horizontal"
        android:textColor="#0D47A1"
        android:textSize="18sp"
        android:onClick="showToast" />

    <Button
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:text="@string/btn2_txt"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:textColor="#0D47A1"
        android:textSize="18sp"
        android:onClick="showToast" />

    <Button
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:text="@string/btn3_txt"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:textColor="#0D47A1"
        android:textSize="18sp"
        android:onClick="showToast" />

    <Button
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:text="@string/btn4_txt"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:textColor="#0D47A1"
        android:textSize="18sp"
        android:onClick="showToast" />

    <Button
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:text="@string/btn5_txt"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:textColor="#0D47A1"
        android:textSize="18sp"
        android:onClick="showToast" />

    <Button
        android:layout_width="@dimen/main_btn_width"
        android:layout_height="@dimen/main_btn_height"
        android:text="@string/btn6_txt"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:textColor="#0D47A1"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:onClick="showToast" />
</LinearLayout>
